--- a/Django_first_Project/mydjangoproject/templates/base.html
+++ b/Django_first_Project/mydjangoproject/templates/base.html
@@ -58,7 +58,7 @@
 
     {% block content %} {% endblock  %}
 
-     <section class="">     {% comment %}fixed-bottom {% endcomment %}
+     <section class="fixed-bottom">     {% comment %}fixed-bottom {% endcomment %}
       <footer class="pt-2 pb-2  bg-primary text-light">
         <div class="container">
           <div class="row align-items-center">
